[gd_scene load_steps=4 format=2]

[ext_resource path="res://common_assets/Map/expedition2.jpg" type="Texture" id=1]
[ext_resource path="res://common_assets/Map/red button.png" type="Texture" id=2]
[ext_resource path="res://scenes/Expedition/ExpeditionMaps/Map_5_stage.gd" type="Script" id=3]

[node name="TextureRect" type="TextureRect"]
margin_right = 1198.0
margin_bottom = 720.0
rect_scale = Vector2( 0.853669, 0.800274 )
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stage1" type="Sprite" parent="."]
position = Vector2( 82.6098, 502.64 )
scale = Vector2( 0.239708, 0.281852 )
texture = ExtResource( 2 )

[node name="Button1" type="Button" parent="Stage1"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -146.0
margin_top = -242.0
margin_right = 180.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stage2" type="Sprite" parent="."]
position = Vector2( 262.608, 305.228 )
scale = Vector2( 0.239805, 0.247692 )
texture = ExtResource( 2 )

[node name="Button2" type="Button" parent="Stage2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -146.0
margin_top = -242.0
margin_right = 180.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stage3" type="Sprite" parent="."]
position = Vector2( 452.569, 505.891 )
scale = Vector2( 0.221084, 0.272637 )
texture = ExtResource( 2 )

[node name="Button3" type="Button" parent="Stage3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -146.0
margin_top = -242.0
margin_right = 180.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stage4" type="Sprite" parent="."]
position = Vector2( 774.014, 513.972 )
scale = Vector2( 0.245722, 0.268509 )
texture = ExtResource( 2 )

[node name="Button4" type="Button" parent="Stage4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -146.0
margin_top = -242.0
margin_right = 180.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stage5" type="Sprite" parent="."]
position = Vector2( 981.731, 350.429 )
scale = Vector2( 0.23321, 0.277724 )
texture = ExtResource( 2 )

[node name="Button5" type="Button" parent="Stage5"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -146.0
margin_top = -242.0
margin_right = 180.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Stage1/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Stage2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Stage3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Stage4/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Stage5/Button5" to="." method="_on_Button5_pressed"]
